--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,24 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Your Name – CV</title>
-  <link rel="stylesheet" href="style.css"> <!-- Optional CSS styling -->
-</head>
-<body>
-  <h1>Your Name</h1>
-  <p>Email: your@email.com</p>
-  <h2>Education</h2>
-  <ul>
-    <li>Degree, Institution, Year</li>
-  </ul>
-  <h2>Experience</h2>
-  <ul>
-    <li>Job title – Company (Year–Year)</li>
-  </ul>
-  <h2>Skills</h2>
-  <ul>
-    <li>Skill 1, Skill 2, Skill 3</li>
-  </ul>
-</body>
-</html>
+
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
+
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
+jobs:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+
